Clean up some deprecated warnings for post 1.8, use clone segment cache. Fixup InputEvent deprecations around *_MASK and getModifiers. Fixup deprecation Class.newInstance Use clone() to copy SwingBuffer segment cache.